--- a/gulu-ui-1/package.json
+++ b/gulu-ui-1/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "vite": "^1.0.0-rc.3",
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.0.0-rc.1",
+    "vue-router": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1"
