--- a/gulu-ui-1/package.json
+++ b/gulu-ui-1/package.json
@@ -11,6 +11,7 @@
     "vue-router": "^4.0.0-beta.3"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "sass": "^1.26.10"
   }
 }
